--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rematch/core": "^1.1.0",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "iso-639-1": "^2.0.5",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
