Add security notice in .env committed to git

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+# Notice: it's a bad practice to commit .env to git, here is just for demo purpose
+# For more info: https://dev.to/somedood/please-dont-commit-env-3o9h
+
 # https://facebook.github.io/create-react-app/docs/adding-custom-environment-variables
 
 # https://developers.themoviedb.org/3/getting-started/authentication
